--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "trexengine",
   "version": "1.0.0",
   "description": "",
-  "main": "src/electron/electronApp.js",
+  "main": "electron/electronApp.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron ."
